# Road-recognition-CNN-in-lidar-data

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dataset.py  DatasetListForRotations.py  GTpngToNP.py  Makefile  Model.py  accuracyCalc.py  actualize.sh  baseCNN.py  binToPCL.sh  binToPCLscript.sh  cmake_install.cmake  convertModel.py  createImagesFromTestData.sh  createNetworkInputAndGT.py  createRotatedPcl.py  createTensors.py  experiment.sh  files  finishDataset.sh  fourTimesGT.sh  fourTimesInputTensors.sh  getFileLists.py  getFiles.py  getFullTestACC.py  getModelAcc.py  getPrimitiveACC.py  getPrimitiveClasifierACC.py  gridMaker.py  groundTruthTensorMaker.py  gtFlip.py  inputStatView.py  installPackages.sh  makeRotations.py  model.lua  parameters.py  pclToStats.sh  pclviewer.cpp  (+22 more)
DatasetForUse/test/: um_000001  um_000011  um_000021  um_000031  um_000041  um_000071  um_000081  um_000091  umm_000001  umm_000021  umm_000031  umm_000041  umm_000061  umm_000091  uu_000001  uu_000011  uu_000051  uu_000061  uu_000071
DatasetForUse/train/: um_000002  um_000004  um_000005  um_000008  um_000009  um_000010  um_000012  um_000014  um_000016  um_000017  um_000022  um_000023  um_000026  um_000028  um_000035  um_000036  um_000038  um_000039  um_000043  um_000049  um_000050  um_000054  um_000058  um_000060  um_000062  um_000064  um_000065  um_000066  um_000067  (+90 more)
GroundTruth/: um_000000_gt.npy  um_000001_gt.npy  um_000002_gt.npy  um_000003_gt.npy  um_000004_gt.npy  um_000005_gt.npy  um_000006_gt.npy  um_000007_gt.npy  um_000008_gt.npy  um_000009_gt.npy  um_000010_gt.npy  um_000011_gt.npy  um_000012_gt.npy  um_000013_gt.npy  um_000014_gt.npy  um_000015_gt.npy  um_000016_gt.npy  um_000017_gt.npy  um_000018_gt.npy  um_000019_gt.npy  um_000020_gt.npy  um_000021_gt.npy  um_000022_gt.npy  um_000023_gt.npy  um_000024_gt.npy  um_000025_gt.npy  um_000026_gt.npy  um_000027_gt.npy  um_000028_gt.npy  um_000029_gt.npy  um_000030_gt.npy  um_000031_gt.npy  um_000032_gt.npy  um_000033_gt.npy  um_000034_gt.npy  um_000035_gt.npy  um_000036_gt.npy  um_000037_gt.npy  um_000038_gt.npy  um_000039_gt.npy  (+249 more)
kitti-pcl-master/: CMakeCache.txt  Makefile  cmake_install.cmake
kitti2pcl/: CMakeLists.txt
kitti2pcl/src/: CMakeLists.txt
pclFiles/: um_000000.pcd  um_000001.pcd  um_000002.poinCL  um_000003.poinCL  um_000004.poinCL  um_000005.poinCL  um_000006.poinCL  um_000007.pcd  um_000008.poinCL  um_000009.pcd  um_000010.poinCL  um_000011.pcd  um_000012.pcd  um_000014.poinCL  um_000015.pcd  um_000016.poinCL  um_000017.pcd  um_000018.pcd  um_000019.poinCL  um_000020.poinCL  um_000021.pcd  um_000022.pcd  um_000023.poinCL  um_000024.poinCL  um_000025.poinCL  um_000026.poinCL  um_000027.pcd  um_000028.pcd  um_000029.pcd  um_000030.poinCL  um_000031.poinCL  um_000032.pcd  um_000033.poinCL  um_000034.poinCL  um_000035.pcd  um_000036.pcd  um_000037.pcd  um_000038.pcd  um_000039.pcd  um_000040.poinCL  (+152 more)
pclResultView/: CMakeLists.txt  pclResultView  pclResultView.cpp
pclRotator/: CMakeLists.txt  pclRotator.cpp
pclviewer/: CMakeLists.txt  pclviewer.cpp
rotator/: CMakeLists.txt  cmake_install.cmake  createRotation.cpp
trainingDone/: plotResults.py  um_010010  um_010085  umm_120664
(+2243 files in other folders)
