cmake_minimum_required(VERSION 3.10)

ADD_EXECUTABLE(kitti2pcd kitti2pcd.cpp)
TARGET_LINK_LIBRARIES(kitti2pcd ${Boost_LIBRARIES} ${PCL_LIBRARIES})


INSTALL(TARGETS kitti2pcd 
  RUNTIME DESTINATION bin COMPONENT app
  LIBRARY DESTINATION lib COMPONENT runtime
  ARCHIVE DESTINATION lib COMPONENT runtime
  PUBLIC_HEADER DESTINATION include COMPONENT dev
  FRAMEWORK DESTINATION "/Library/Frameworks"
)
